cicd/istio/bookinfo-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo-vs
  namespace: bookinfo
spec:
  hosts:
    - "*"    
  gateways:  # 게이트웨이로 사용할 인그레스 이름 지정
    - bookinfo-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: productpage.bookinfo.svc.cluster.local
            port:
              number: 9080
