cicd/istio/fault-injection-time.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fault-time-details
  namespace: bookinfo
spec:
  hosts:
    - details
  http:
    - match:
        - uri:
            prefix: /api/v1/vehicles
      fault:
        delay:
          percentage:
            value: 100 # 트래픽의 100퍼센터 5초 동안 지연 허용
          fixedDelay: 500ms
      route:
        - destination:
            host: details
