cicd/istio/fault-injection503.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fault503-details
  namespace: bookinfo
spec:
  hosts:
    - details
  http:
    - fault:     # 강제 오류 주입(Fault Injection)
        abort:
          httpStatus: 503
          percentage:
            value: 100   # 요청의 100% 에 대해 오류를 주입
      route:
        - destination:
            host: details
